force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Field to populate Distribution Channel : 01/02</description>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>