force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/is_MFN_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>is_MFN_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture whether a line item is eligible for MFN Approval</description>
    <label>is MFN Line Item</label>
    <type>Checkbox</type>
</CustomField>