force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Line_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Line_Type_1__c</fullName>
    <description>This field is only used only at back-end level only</description>
    <label>Line Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Material Group 1</fullName>
            </value>
            <value>
                <fullName>Price Group - Material</fullName>
            </value>
            <value>
                <fullName>Price Group - Material Group 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>