force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Specifies type of line added. Ex: Material Group 1</description>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Material Group 1</fullName>
            </value>
            <value>
                <fullName>Price Group - Material</fullName>
            </value>
            <value>
                <fullName>Price Group - Material Group 1</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>UC - Material</fullName>
            </value>
            <value>
                <fullName>UC - Material Group 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>