force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Material_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_1__c</fullName>
    <description>Field to store Material Group of product</description>
    <label>Material Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Material_Group_1</valueSetName>
    </valueSet>
</CustomField>