force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>Field to store Material Number of product</description>
    <label>Material Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>