force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Max_Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Guidance__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Max Discount Guidance percentage pulled from Discount Guidance, based on Account and Product/MG1</description>
    <inlineHelpText>Reflects the 3rd Quartile of discounting offered to like-customers historically</inlineHelpText>
    <label>Max Discount Guidance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>