force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Old_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Number__c</fullName>
    <description>Field to capture Old Material Number from Product</description>
    <formula>Apttus__ProductId__r.Old_Material_Number__c</formula>
    <label>Old Material Number</label>
    <type>Text</type>
</CustomField>