force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Open_Offer_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Line_Type__c</fullName>
    <description>Describes the type of line item related to Open offer Agreements</description>
    <label>Open Offer Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>PSP Category</fullName>
            </value>
            <value>
                <fullName>PSP Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>