force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <description>Role of Partner : Z3 or Z5</description>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z5</fullName>
            </value>
            <value>
                <fullName>Z3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>