force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Permitted_Markup_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Markup_Percentage__c</fullName>
    <description>Permitted Markup % that can be applied</description>
    <label>Permitted Markup (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>