force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <description>Represents Price Group of Line Item</description>
    <label>Price Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>