force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>This field stores the priority for the agreement line item to determine the sorting on the approval email notifications.</description>
    <inlineHelpText>Agreement Lineitems priority for sorting order on approval email notifications.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>