force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/PSP_Discount__c.field-meta.xml
<CustomField>
    <fullName>PSP_Discount__c</fullName>
    <description>PSP Discount</description>
    <label>PSP Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>