force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Q2_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q2_Quota__c</fullName>
    <description>Field to represent Q2 Quota of Product</description>
    <label>Q2 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>