force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Q4_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q4_Quota__c</fullName>
    <description>Field to represent Q4 Quota of Product</description>
    <label>Q4 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>