force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Discount__c</fullName>
    <description>Highest Budgetary/Standing Quote discount from the customer hierarchy</description>
    <label>Quote Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>