force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>Budgetary /Standing Quote number that is associated with the Quote Discount % option</description>
    <label>Quote Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>