force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Template_Discount_Flag_2__c.field-meta.xml
<CustomField>
    <fullName>Template_Discount_Flag_2__c</fullName>
    <description>Returns True if '% Discount' is applied and CurrencyIsoCode matches with that of Agreement</description>
    <formula>IF (
OR(
ISPICKVAL(Discount_Type__c ,&apos;% Discount&apos;),
AND(
NOT(
ISBLANK(TEXT(CurrencyIsoCode))
),
TEXT(CurrencyIsoCode) = TEXT(Apttus__AgreementId__r.CurrencyIsoCode)
)
),
True,
False
)</formula>
    <label>Template Discount Flag 2</label>
    <type>Checkbox</type>
</CustomField>