force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Ultimate_Consignee_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_ERP_Number__c</fullName>
    <description>Field to store ERP Number of Ultimate Consignee Account</description>
    <label>Ultimate Consignee ERP Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>