force-app/main/default/objects/Apttus__AgreementLineItem__c/fields/Universal_Grid_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Universal_Grid_Discount_Type__c</fullName>
    <description>Type of discount related to Universal Grid</description>
    <label>Universal Grid Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% Discount</fullName>
                <default>true</default>
                <label>% Discount</label>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>