force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Master_Customer.recordType-meta.xml
<RecordType>
    <fullName>Master_Customer</fullName>
    <active>true</active>
    <label>Master Customer</label>
</RecordType>