force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Master_Service.recordType-meta.xml
<RecordType>
    <fullName>Master_Service</fullName>
    <active>true</active>
    <label>Master Service</label>
</RecordType>