force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Open_Offer_Agreement_Line_Items.recordType-meta.xml
<RecordType>
    <fullName>Open_Offer_Agreement_Line_Items</fullName>
    <active>true</active>
    <description>Record Type for Open offer Agreement Line items</description>
    <label>Open Offer Agreement Line Items</label>
</RecordType>