force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Special_Programs.recordType-meta.xml
<RecordType>
    <fullName>Special_Programs</fullName>
    <active>true</active>
    <label>Special Programs</label>
</RecordType>