force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Standing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Standing_Quote</fullName>
    <active>true</active>
    <label>Standing Quote</label>
</RecordType>