force-app/main/default/objects/Apttus__AgreementLineItem__c/recordTypes/Tender.recordType-meta.xml
<RecordType>
    <fullName>Tender</fullName>
    <active>true</active>
    <label>Tender</label>
</RecordType>