force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/Agreement_line_item_record_cannot_be_edi.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_line_item_record_cannot_be_edi</fullName>
    <active>true</active>
    <description>Agreement Line Record cannot be edited/created during SAP validation.</description>
    <errorConditionFormula>OR(
 AND(
    OR(
	Apttus__AgreementId__r.Validation_Status__c  == $Label.AgreementValidationStatusSentToSAP,Apttus__AgreementId__r.Validation_Status__c == $Label.AgreementValidationStatusInProgress
	),
	ISNEW()
	),
 AND(
	NOT($Profile.Name == $Label.Integration_SAP_Sales),
	NOT($Profile.Name == $Label.ProfileSystemAdmin),
	OR(Apttus__AgreementId__r.Validation_Status__c == $Label.AgreementValidationStatusSentToSAP,Apttus__AgreementId__r.Validation_Status__c == $Label.AgreementValidationStatusInProgress),
	NOT(ISNEW())
)
)</errorConditionFormula>
    <errorMessage>Agreement line item record cannot be edited/created during SAP validation.</errorMessage>
</ValidationRule>