force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgLILineStatusDiscontinued.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgLILineStatusDiscontinued</fullName>
    <active>true</active>
    <description>DCP-34092:New Agreement Line Items cannot be discontinued. Please delete any new line items that are no longer required.</description>
    <errorConditionFormula>AND
(
NOT($Permission.Bypass_CLM_Validation_Rule),
ISPICKVAL(Apttus_CMConfig__LineStatus__c,&apos;New&apos;),
ISPICKVAL( Discontinued__c ,&apos;Yes&apos;)
)</errorConditionFormula>
    <errorMessage>New Agreement Line Items cannot be discontinued. Please delete any new line items that are no longer required.</errorMessage>
</ValidationRule>