force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAGLIupdationOnActivateCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAGLIupdationOnActivateCompleted</fullName>
    <active>true</active>
    <description>DCP-34092: Agreement Line Items cannot be edited on active agreements. Please proceed with an amendment if necessary.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT($Permission.Bypass_CLM_Validation_Rule),
$Profile.Name &lt;&gt; $Label.Integration_Sales_SNAP_Profile,
OR
(
Apttus__AgreementId__r.Validation_Status__c = $Label.AgreementValidationStatusActivateCompleted,
Apttus__AgreementId__r.Validation_Status__c = $Label.AgreementValidationStatusActivateInProgress
),
NOT(ISCHANGED( Apttus_CMConfig__LineStatus__c ))
)</errorConditionFormula>
    <errorMessage>Agreement Line Items cannot be edited on active agreements. Please proceed with an amendment if necessary.</errorMessage>
</ValidationRule>