force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgreementLiDiscountDecimals.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgreementLiDiscountDecimals</fullName>
    <active>true</active>
    <description>Discount field in agreement lineitems should not have more than 2 decimal places.</description>
    <errorConditionFormula>NOT(REGEX(TEXT(Discount__c),"^$|^[0-9][0-9]*[.]?[0-9]{0,2}$"))</errorConditionFormula>
    <errorMessage>Discount should not have more than 2 decimal places.</errorMessage>
</ValidationRule>