force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgreementLIDiscountGreaterThan100.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgreementLIDiscountGreaterThan100</fullName>
    <active>true</active>
    <description>DCP-31422: Discount % cannot be greater than 100%</description>
    <errorConditionFormula>ISPICKVAL(Discount_Type__c,&quot;% Discount&quot;)  &amp;&amp;  Discount__c  &gt; 100</errorConditionFormula>
    <errorMessage>Discount % cannot be greater than 100%</errorMessage>
</ValidationRule>