force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgreementStatusAndStageOnEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgreementStatusAndStageOnEdit</fullName>
    <active>false</active>
    <description>Restrict editing Agreement Line Item when related Agreement is in any other stage other than : Status - Request and Status Category - Request or Approval has been Rejected.</description>
    <errorConditionFormula>IF(
AND(
NOT( ISNEW()), 
AND(
NOT(
ISPICKVAL( Apttus__AgreementId__r.Apttus_Approval__Approval_Status__c , &apos;Rejected&apos;)
),
OR(
NOT(
 ISPICKVAL( Apttus__AgreementId__r.Apttus__Status__c , &apos;Request&apos;) 
),
NOT(
ISPICKVAL(  Apttus__AgreementId__r.Apttus__Status_Category__c  , &apos;Request&apos;) 
)
) 
)
),true, false
)</errorConditionFormula>
    <errorMessage>Cannot update the agreement line items in this stage.</errorMessage>
</ValidationRule>