force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgrLIEndDateLessThanAgEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgrLIEndDateLessThanAgEndDate</fullName>
    <active>true</active>
    <description> DCP-31209:Line item End date should be within Agreement Start date and End date.</description>
    <errorConditionFormula>AND
        (
        NOT($Permission.Bypass_CLM_Validation_Rule),
        $Profile.Name &lt;&gt; &apos;Integration Sales SnapLogic&apos;,
        LOWER( $User.Username ) &lt;&gt; LOWER(&apos;autoproc@&apos; &amp; CASESAFEID($Organization.Id)),
        NOT(ISBLANK(Apttus__AgreementId__r.Apttus__Contract_End_Date__c)),
        Apttus_CMConfig__EndDate__c  &gt;  Apttus__AgreementId__r.Apttus__Contract_End_Date__c,
        TEXT(Apttus_CMConfig__LineStatus__c) &lt;&gt; $Label.AgreementLineItemLineStatusExisting
        )</errorConditionFormula>
    <errorMessage>Line item End date should be within Agreement Start date and End date</errorMessage>
</ValidationRule>