force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgrLineItemHasOpenOfferProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgrLineItemHasOpenOfferProduct</fullName>
    <active>true</active>
    <description>This rule checks if the product associated is an Open Offer Product</description>
    <errorConditionFormula>AND(
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    NOT($Permission.Bypass_CLM_Validation_Rule),
    RecordType.DeveloperName = $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
    Apttus__ProductId__r.Open_Offer_Product__c = false
)</errorConditionFormula>
    <errorMessage>You can not include Non Open Offer Products in Open Offer Agreement.</errorMessage>
</ValidationRule>