force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgrLIStartDateGreaterThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgrLIStartDateGreaterThanEndDate</fullName>
    <active>true</active>
    <description>DCP-31209: Line item Start date cannot be greater than line item End date
DCP-34092: Added Profile Check</description>
    <errorConditionFormula>AND
(
NOT($Permission.Bypass_CLM_Validation_Rule),
NOT(ISBLANK(Apttus_CMConfig__StartDate__c)),
NOT(ISBLANK(Apttus_CMConfig__EndDate__c)),
Apttus_CMConfig__StartDate__c  &gt;  Apttus_CMConfig__EndDate__c
)</errorConditionFormula>
    <errorMessage>Line item Start date cannot be greater than line item End date</errorMessage>
</ValidationRule>