force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckAgrLIStartDateLessThanAgStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgrLIStartDateLessThanAgStartDate</fullName>
    <active>true</active>
    <description>DCP-31209: Line item Start date should be within Agreement Start date and End date
DCP-34092: Added line status check</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_CLM_Validation_Rule),
$Profile.Name &lt;&gt; &apos;Integration Sales SnapLogic&apos;,
LOWER( $User.Username ) &lt;&gt; LOWER(&apos;autoproc@&apos; &amp; CASESAFEID($Organization.Id)),
NOT(ISBLANK(Apttus__AgreementId__r.Apttus__Contract_Start_Date__c)),
Apttus_CMConfig__StartDate__c &lt; Apttus__AgreementId__r.Apttus__Contract_Start_Date__c,
TEXT(Apttus_CMConfig__LineStatus__c) &lt;&gt; $Label.AgreementLineItemLineStatusExisting
)</errorConditionFormula>
    <errorMessage>Line item Start date should be within Agreement Start date and End date</errorMessage>
</ValidationRule>