force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckALIAmendRenewUpdation.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckALIAmendRenewUpdation</fullName>
    <active>true</active>
    <description>DCP-38238 When agreement is amending/renewing, then the user should not be able to change the key fields informations</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name == $Label.Integration_SAP_Sales),
    NOT($Profile.Name == 
        $Label.Integration_Sales_SNAP_Profile),
    NOT($Profile.Name == $Label.ProfileSystemAdmin),
    NOT($Profile.Name == $Label.Profile_Release_Manager),
    NOT($Permission.Bypass_CLM_Validation_Rule),
    NOT(RecordType.DeveloperName = $Label.AgreementLineItemRecordTypeDevNameOpenOffer),
    NOT(ISNEW()),    
    OR(
       TEXT(Apttus_CMConfig__LineStatus__c) =
       $Label.AgreementLineItemLineStatusExisting,
       TEXT(Apttus_CMConfig__LineStatus__c) =
       $Label.AgreementLineItemLineStatusUpdated
    ),
    OR(
       ISCHANGED(Line_Type__c),
       ISCHANGED(Line_Type_1__c),
       ISCHANGED(Customer_ERP_Number__c),
       ISCHANGED(Price_Group__c),
       ISCHANGED(Sales_Org__c),
       ISCHANGED(Distribution_Channel__c),
       ISCHANGED(CurrencyIsoCode),
       ISCHANGED(Material_Number__c),
       ISCHANGED(Material_Group_1__c),
       ISCHANGED(Partner_Role__c),
       ISCHANGED(Ultimate_Consignee_ERP_Number__c),
       ISCHANGED(Discount_Type__c)
    )
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify the existing line items except Discounts , Dates or Discontinued flag.</errorMessage>
</ValidationRule>