force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckCustomerElectionTypeDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCustomerElectionTypeDiscount</fullName>
    <active>true</active>
    <description>Check agreement line items Discounttype based on Customer election value.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name == $Label.Integration_SAP_Sales),
NOT($Profile.Name == $Label.ProfileSystemAdmin),
!$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
RecordType.DeveloperName= $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
OR(
AND(
Text(Customer_Election__c) = $Label.CustomElectionPickListQuote,
OR(ISNULL(Quote_Discount__c), ISBLANK(Quote_Number__c))
),
AND(
Text(Customer_Election__c) = $Label.CustomElectionPickListSupplyAgreement,
OR(ISNULL(Supply_Agreement_Discount__c),ISNULL(Supply_Agreement_Start_Date__c),ISNULL(Supply_Agreement_End_Date__c))
),
AND(
Text(Customer_Election__c)= $Label.CustomElectionPickListUniversalGrid,
ISNULL(Universal_Grid_Discount__c)
),
AND(
Text(Customer_Election__c) = $Label.CustomElectionPickListPSP,
ISNULL(PSP_Discount__c)
)
)
)</errorConditionFormula>
    <errorMessage>Some of the details related to customer election are missing. Please enter all the details as needed.</errorMessage>
</ValidationRule>