force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckDiscounIsInNegativeOrNot.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDiscounIsInNegativeOrNot</fullName>
    <active>true</active>
    <errorConditionFormula>Discount__c &lt; 0</errorConditionFormula>
    <errorMessage>Discounts cannot be maintained in Negative values</errorMessage>
</ValidationRule>