force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckForAccountDistributionChannel.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForAccountDistributionChannel</fullName>
    <active>true</active>
    <description>Validation rule to check for Agreement line item&apos;s Distribution channel with Account&apos;s Distribution Channel.</description>
    <errorConditionFormula>AND(
		NOT(ISPICKVAL(Line_Type__c, &apos;Quota&apos; )),
		TEXT( Distribution_Channel__c ) &lt;&gt;   Apttus__AgreementId__r.Distribution_Channel__c)</errorConditionFormula>
    <errorMessage>Distribution channel of the line item should be same as the primary accounts distribution channel on the agreement.</errorMessage>
</ValidationRule>