force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckForOpenOfferDiscountValues.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForOpenOfferDiscountValues</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Profile.Name == $Label.Integration_SAP_Sales),
    NOT($Profile.Name == $Label.ProfileSystemAdmin),
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    RecordType.DeveloperName= $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
    OR(
        ISPICKVAL(Quote_Discount_Type__c,&quot;% Discount&quot;) &amp;&amp; (Quote_Discount__c &lt; 0 || Quote_Discount__c &gt; 100),
        ISPICKVAL(Universal_Grid_Discount_Type__c,&quot;% Discount&quot;) &amp;&amp; (Universal_Grid_Discount__c &gt; 100 || Universal_Grid_Discount__c &lt; 0),
        ISPICKVAL(Supply_Agreement_Discount_Type__c,&quot;% Discount&quot;) &amp;&amp; (Supply_Agreement_Discount__c &gt; 100 || Supply_Agreement_Discount__c &lt; 0),
        NOT(ISBLANK(PSP_Discount__c)) &amp;&amp; (PSP_Discount__c &gt; 100 || PSP_Discount__c &lt; 0)
    )
)</errorConditionFormula>
    <errorMessage>Discount should be between 0 to 100 when the type is % Discount.</errorMessage>
</ValidationRule>