force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckForOpenOfferLineType.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForOpenOfferLineType</fullName>
    <active>true</active>
    <description>This validation rule is to make the Open Offer Linetype field as required.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name == $Label.Integration_SAP_Sales),
    NOT($Profile.Name == $Label.ProfileSystemAdmin),
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    RecordType.DeveloperName = $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
    OR(
       ISBLANK(TEXT(Open_Offer_Line_Type__c)),
       ISNULL( Universal_Grid_Discount__c ) 
    )
)</errorConditionFormula>
    <errorMessage>Please select the Open Offer Line type, Universal Grid Discount</errorMessage>
</ValidationRule>