force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckforOpenOfferSuplyAgreementStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckforOpenOfferSuplyAgreementStartDate</fullName>
    <active>true</active>
    <description>This Validation rule checks for the Supply Agreement dates to be within the Agreement start date and end date.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name == $Label.Integration_SAP_Sales),
    NOT($Profile.Name == $Label.ProfileSystemAdmin),
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    RecordType.DeveloperName= $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
    NOT(TEXT(Apttus_CMConfig__LineStatus__c) = $Label.AgreementLineItemLineStatusExisting),
    OR(TEXT(Customer_Election__c) = $Label.CustomElectionPickListSupplyAgreement,ISPICKVAL(Customer_Election__c,"")),
    OR(NOT(ISNULL(Supply_Agreement_Start_Date__c)),NOT(ISNULL(Supply_Agreement_End_Date__c))),
    OR(
        Supply_Agreement_Start_Date__c &lt; Apttus__AgreementId__r.Apttus__Contract_Start_Date__c,
        Supply_Agreement_Start_Date__c &gt; Apttus__AgreementId__r.Apttus__Contract_End_Date__c,
        Supply_Agreement_End_Date__c &lt; Apttus__AgreementId__r.Apttus__Contract_Start_Date__c,
        Supply_Agreement_End_Date__c &gt; Apttus__AgreementId__r.Apttus__Contract_End_Date__c,
        Supply_Agreement_End_Date__c &lt; Supply_Agreement_Start_Date__c
    )
)</errorConditionFormula>
    <errorMessage>Supply Agreement Start and End Dates must be today or future and must be between Agreement Start and End Dates.</errorMessage>
</ValidationRule>