force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckItemTypeAndDiscountType.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckItemTypeAndDiscountType</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Apttus__AgreementId__r.RecordType.Name != $Label.AgreementRecordTypeChannelPartnerAgreement,
ISPICKVAL(Discount_Type__c,&apos;Fixed Price&apos;),
TEXT(Line_Type__c) == &apos;Material Group 1&apos;
)</errorConditionFormula>
    <errorMessage>Fixed Price cannot be maintained on Material Group1 level.</errorMessage>
</ValidationRule>