force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckOOAgrLineItemHasAtleastOneDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOOAgrLineItemHasAtleastOneDiscount</fullName>
    <active>true</active>
    <description>This rule to check if Open Offer Agreement Line Item has atleast one of discount fields populated.</description>
    <errorConditionFormula>AND(
    !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
    NOT($Permission.Bypass_CLM_Validation_Rule),
    RecordType.DeveloperName = $Label.AgreementLineItemRecordTypeDevNameOpenOffer,
    ISNULL(Quote_Discount__c),
    ISNULL(Supply_Agreement_Discount__c),
    ISNULL(Universal_Grid_Discount__c), 
    ISNULL(PSP_Discount__c)
)</errorConditionFormula>
    <errorMessage>You should have at least one discount option to save the line items.</errorMessage>
</ValidationRule>