force-app/main/default/objects/Apttus__AgreementLineItem__c/validationRules/CheckReqColumnForChannelPartnerAgr.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckReqColumnForChannelPartnerAgr</fullName>
    <active>true</active>
    <description>Required column validation for Channel Partner Agreement  while uploading agreement using X-Author app</description>
    <errorConditionFormula>AND(Apttus__AgreementId__r.RecordType.DeveloperName = $Label.AgreementRecordTypeChannelPartner,
		OR(
			AND(ISPICKVAL(Line_Type__c, &apos;Material&apos;),OR(ISBLANK(Customer_ERP_Number__c),ISBLANK(TEXT(Sales_Org__c)),ISBLANK(TEXT(Distribution_Channel__c)),ISBLANK(TEXT(CurrencyIsoCode)),ISBLANK(Material_Number__c),ISBLANK(Discount__c),ISBLANK(TEXT(Discount_Type__c)))
			),
			AND(ISPICKVAL(Line_Type__c, &apos;Material Group 1&apos;),OR(ISBLANK(Customer_ERP_Number__c),ISBLANK(TEXT(Sales_Org__c)),ISBLANK(TEXT(Distribution_Channel__c)),ISBLANK(TEXT(CurrencyIsoCode)),ISBLANK(TEXT(Material_Group_1__c)),ISBLANK(Discount__c),ISBLANK(TEXT(Discount_Type__c)))
			),
		   AND(ISPICKVAL(Line_Type__c, &apos;UC - Material&apos;),OR(ISBLANK(Customer_ERP_Number__c),ISBLANK(Ultimate_Consignee_ERP_Number__c),ISBLANK(TEXT(Sales_Org__c)),ISBLANK(TEXT(Distribution_Channel__c)),ISBLANK(TEXT(CurrencyIsoCode)),ISBLANK(TEXT(Partner_Role__c)), ISBLANK(Material_Number__c),ISBLANK(Discount__c),ISBLANK(TEXT(Discount_Type__c)))
			),
			AND(ISPICKVAL(Line_Type__c, &apos;UC - Material Group 1&apos;),OR(ISBLANK(Customer_ERP_Number__c), ISBLANK(Ultimate_Consignee_ERP_Number__c), ISBLANK(TEXT(Sales_Org__c)),ISBLANK(TEXT(Distribution_Channel__c)),ISBLANK(TEXT(CurrencyIsoCode)),ISBLANK(TEXT(Partner_Role__c)),ISBLANK(TEXT(Material_Group_1__c)), ISBLANK(Discount__c), ISBLANK(TEXT(Discount_Type__c)))
			),
			AND(ISPICKVAL(Line_Type__c, &apos;Price Group - Material&apos;),OR(ISBLANK(Price_Group__c),ISBLANK(TEXT(Sales_Org__c)),ISBLANK(TEXT(Distribution_Channel__c)), ISBLANK(TEXT(CurrencyIsoCode)), ISBLANK(Material_Number__c), ISBLANK(Discount__c), ISBLANK(TEXT(Discount_Type__c)))
			),	
			AND(ISPICKVAL(Line_Type__c, &apos;Quota&apos;),OR(AND(ISBLANK(Material_Number__c),ISBLANK(TEXT(Material_Group_1__c))),ISBLANK(Q1_Quota__c) ,ISBLANK(Q2_Quota__c), ISBLANK(Q3_Quota__c), ISBLANK(Q4_Quota__c))
			)
		   )
	)</errorConditionFormula>
    <errorMessage>Some Line Items are missing required information. Please refer to the required columns for each Line Type at the top of this sheet.</errorMessage>
</ValidationRule>